Display current location.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,5 +11,8 @@
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        mapbox:center_latitude="54.6872"
+        mapbox:center_longitude="25.2797"
+        mapbox:zoom="11"
         mapbox:style_url="@string/mapbox_map_style_url" />
 </RelativeLayout>
