--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="image_height">240dp</dimen>
+    <dimen name="attractor_height_offset">8dp</dimen>
+    <dimen name="attractor_height_delta">48dp</dimen>
 </resources>
