Story submission flow for demo.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,27 +64,6 @@
 
     </ScrollView>
 
-    <ImageView
-        android:id="@+id/hide_story_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="end"
-        android:layout_margin="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="12dp"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_cancel_24dp"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/show_story_image"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/image_height"
-        android:layout_gravity="bottom"
-        android:visibility="invisible"
-        tools:src="#0f0"
-        tools:visibility="visible" />
-
     <TextView
         android:id="@+id/show_story_button"
         style="@style/TextAppearance.AppCompat.Title"
@@ -99,6 +78,107 @@
         android:paddingTop="8dp"
         android:text="@string/open_story_cta"
         android:visibility="invisible"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/show_story_image"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/image_height"
+        android:layout_gravity="bottom"
+        android:visibility="invisible"
+        tools:src="#0f0"
+        tools:visibility="visible" />
+
+    <ScrollView
+        android:id="@+id/submit_story_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/add_photo_button"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/image_height"
+                android:layout_marginTop="72dp"
+                android:background="#4fff">
+
+                <TextView
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:paddingBottom="8dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingTop="8dp"
+                    android:text="Kaip atrodė?" />
+
+
+                <ImageView
+                    android:id="@+id/submit_story_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+
+            </FrameLayout>
+
+            <EditText
+                android:id="@+id/story_edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:layout_marginTop="16dp"
+                android:hint="Kas įvyko?" />
+
+            <TextView
+                android:id="@+id/submit_story_button"
+                style="@style/TextAppearance.AppCompat.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="56dp"
+                android:background="@drawable/button_border"
+                android:paddingBottom="8dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
+                android:text="Pasidalink istorija" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <ImageView
+        android:id="@+id/hide_story_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="end"
+        android:layout_margin="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="12dp"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_cancel_24dp"
+        tools:visibility="invisible" />
+
+    <ImageView
+        android:id="@+id/add_story_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="end"
+        android:layout_margin="16dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:padding="12dp"
+        android:visibility="visible"
+        app:srcCompat="@drawable/ic_add_circle_white_24dp"
         tools:visibility="visible" />
 
 </FrameLayout>
