--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:mapbox="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -25,101 +24,9 @@
         android:layout_height="match_parent"
         android:background="@drawable/center_gradient" />
 
-    <ScrollView
-        android:id="@+id/storyContainer"
+    <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
+        android:id="@+id/controller_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:paddingBottom="48dp"
-            android:paddingTop="72dp">
-
-            <ImageView
-                android:id="@+id/storyImage"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/image_height"
-                android:elevation="8dp"
-                tools:src="#f00" />
-
-            <TextView
-                android:id="@+id/storyText"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="48dp"
-                android:layout_marginRight="48dp"
-                android:layout_marginTop="32dp"
-                android:fontFeatureSettings="onum"
-                android:lineSpacingExtra="6dp"
-                tools:text="I am story, a big beautiful story of love and cookies and DMP." />
-
-            <ImageView
-                android:id="@+id/storyAuthorImage"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="48dp"
-                app:srcCompat="@drawable/ic_account_circle_white_64dp" />
-
-            <TextView
-                android:id="@+id/storyAuthor"
-                style="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="64dp"
-                android:layout_marginRight="64dp"
-                android:fontFeatureSettings="smcp"
-                android:gravity="center"
-                tools:text="Vincas Mykolaitis-Putinas" />
-
-        </LinearLayout>
-
-    </ScrollView>
-
-    <TextView
-        android:id="@+id/showStoryButton"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:layout_marginBottom="64dp"
-        android:background="@drawable/button_border"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="8dp"
-        android:text="@string/open_story_cta"
-        android:visibility="invisible"
-        tools:visibility="visible" />
-
-    <ImageView
-        android:id="@+id/showStoryImage"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/image_height"
-        android:layout_gravity="bottom"
-        android:visibility="invisible"
-        tools:src="#0f0"
-        tools:visibility="invisible" />
-
-    <ImageView
-        android:id="@+id/hideStoryButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="end"
-        android:layout_margin="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:padding="12dp"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/ic_cancel_24dp"
-        tools:visibility="visible" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
