--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <defaultsMap>
     <entry>
-        <key>geofence_loitering_in_seconds</key>
+        <key>geofence_loitering_s</key>
         <value>60</value>
     </entry>
     <entry>
-        <key>geofence_radius_in_meters</key>
+        <key>geofence_radius_m</key>
         <value>150</value>
     </entry>
 </defaultsMap>
