--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#AB38B8</color>
 
     <color name="imagePlaceholder">#4FFF</color>
+    <color name="base">#EBE3CD</color>
+    <color name="baseTransparent">#00EBE3CD</color>
 </resources>
