--- a/app/src/main/res/layout/controller_story.xml
+++ b/app/src/main/res/layout/controller_story.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <View
+        android:id="@+id/storyScrim"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/storyScrim" />
+
     <ScrollView
         android:id="@+id/storyContainer"
         android:layout_width="match_parent"
