--- a/app/src/main/res/layout/controller_story.xml
+++ b/app/src/main/res/layout/controller_story.xml
@@ -23,7 +23,7 @@
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingBottom="48dp"
-            android:paddingTop="72dp">
+            android:paddingTop="88dp">
 
             <ImageView
                 android:id="@+id/storyImage"
@@ -74,7 +74,10 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="end"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="12dp"
         app:srcCompat="@drawable/ic_cancel_24dp" />
