--- a/app/src/main/res/layout/controller_main.xml
+++ b/app/src/main/res/layout/controller_main.xml
@@ -10,7 +10,7 @@
         android:layout_height="@dimen/image_height"
         android:layout_gravity="bottom"
         android:visibility="invisible"
-        tools:src="#0f0"
+        tools:src="@color/imagePlaceholder"
         tools:visibility="visible" />
 
     <TextView
@@ -20,12 +20,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="64dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_accent"
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="8dp"
         android:text="@string/open_story_cta"
+        android:textColor="@color/colorAccent"
         android:visibility="invisible"
         tools:visibility="visible" />
 
