--- a/app/src/main/res/layout/controller_sync.xml
+++ b/app/src/main/res/layout/controller_sync.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="64dp"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_white"
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
