Reduce active story radius and make it configurable via remote config.

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -8,4 +8,8 @@
         <key>geofence_radius_m</key>
         <value>150</value>
     </entry>
+    <entry>
+        <key>story_radius_m</key>
+        <value>150</value>
+    </entry>
 </defaultsMap>
