--- a/app/src/main/res/drawable/marker_story_top.xml
+++ b/app/src/main/res/drawable/marker_story_top.xml
@@ -3,6 +3,6 @@
     android:shape="oval">
     <solid android:color="@color/markerForeground" />
     <size
-        android:width="12dp"
-        android:height="12dp" />
+        android:width="@dimen/dot_marker_top_size"
+        android:height="@dimen/dot_marker_top_size" />
 </shape>
