--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,12 @@
         <item name="android:windowTranslucentStatus">true</item>
     </style>
 
+    <style name="OutlineButton" parent="@style/TextAppearance.AppCompat.Title">
+        <item name="android:background">@drawable/button_border_white</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingRight">16dp</item>
+    </style>
+
 </resources>
