--- a/app/src/main/res/layout/controller_onboarding_mechanic.xml
+++ b/app/src/main/res/layout/controller_onboarding_mechanic.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#4000">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/onboardingButton"
